Fix endScore message alignment

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -42,13 +42,17 @@
 
 #endScore {
     display: none;
-    margin-top: 30%;
-    text-align: center;
     position: absolute;
-    font-size: 4em;
-    width: 100%;
     height: 100%;
+    width: 100%;
     z-index: 10;
+}
+
+#endScore td {
+    vertical-align: middle;
+    white-space: normal;
+    text-align: center;
+    font-size: 4em;
 }
 
 div.line {
